# Smart-Library-AI

./: README.md
smart_bookstore/app/: app.py
smart_bookstore/app/common/AI/: chatbot.py
smart_bookstore/app/common/CRUD/: book_crud.py
smart_bookstore/app/common/database/: models.py
smart_bookstore/app/routes/: authors.py  books.py  users.py
smart_bookstore/app/schemas/: book.py
smart_bookstore/app/utils/: prompts.py
streamlit_test/: app.py  pyproject.toml
