[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Saleh <slxw191@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
sseclient = "^0.0.27"
langchain-core = "^0.2.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
